Add test for fetch posts
